--- a/apps/templates/blogs/show_blogs.html
+++ b/apps/templates/blogs/show_blogs.html
@@ -8,7 +8,7 @@
             {% if user.is_authenticated %}
                 <div class="add_buttons">
                     <!--  Add blog button  -->
-                    {% if user.id == post.author.id or user.id == 1 %}
+                    {% if user.is_superuser %}
                         <a href="{% url 'blogs:add_blog' %}">
                             <button type="button" class="btn btn-success" id="addBlogBtn">➕ Add a blog</button>
                         </a>
@@ -40,7 +40,7 @@
                             class="card-text text-muted h6"><i>{{ post.blog_category }}</i></a>
                             <p></p>
                             <p class="card-text" style="color: black">{{ post.snippet }}</p>
-{#                            <p class="card-text">{{ post.content|slice:":200"|safe }}...</p>#}
+                            {#                            <p class="card-text">{{ post.content|slice:":200"|safe }}...</p>#}
                             <a href="{% url 'blogs:post_detail' post.slug %}" class="btn btn-primary">Read More
                                 &rarr;</a>
                             <p class="comments-count">
