💫 Added account page (v.0.1.0)

--- a/apps/templates/_helpers/_header.html
+++ b/apps/templates/_helpers/_header.html
@@ -57,7 +57,7 @@
                  id="userGreetingDiv">
                 {% if user.is_authenticated %}
 {#                    <div id="clientGreeting">Hi, <i>{{ user.username }}!</i></div>#}
-                    <div id="clientGreeting">ACCOUNT</div>
+                    <div id="clientGreeting"><a href="{% url 'clients:account_page' %}">ACCOUNT</a></div>
                     <div>
                         <a href="{% url 'logout' %}" id="clientGreeting">LOGOUT</a></div>
                 {% else %}
