--- a/apps/templates/_helpers/_base.html
+++ b/apps/templates/_helpers/_base.html
@@ -26,6 +26,7 @@
 
     <link href="{% static "styles/index.css" %}" rel="stylesheet">
     <link href="{% static "styles/about_us.css" %}" rel="stylesheet">
+    <link href="{% static "styles/account_page.css" %}" rel="stylesheet">
 </head>
 <body id="bg"
       style="background-image: url('{% static "img/background_image.jpg" %}')">
