--- a/apps/templates/clients/edit_profile.html
+++ b/apps/templates/clients/edit_profile.html
@@ -5,13 +5,15 @@
 {% block body %}
     <h1>Edit account information</h1>
     <hr>
-    <div>
+    <div class="edit-profile-form">
         <h1 class="h3 mb-3 fw-normal"></h1>
-
-        <form method="post">
+        <form method="post" class="row g-3">
             {% csrf_token %}
-            {{ form | crispy }}
-            <button type="submit" id="sign-up-btn" class="btn btn-success">Update</button>
+            {{ form }}
+            <div class="col-12" style="text-align: center;">
+                <button type="submit" id="sign-up-btn" class="btn btn-success">Update
+                </button>
+            </div>
         </form>
     </div>
 {% endblock %}
