--- a/apps/templates/clients/account_page.html
+++ b/apps/templates/clients/account_page.html
@@ -10,7 +10,7 @@
         <div class="sub-nav-container profile clearfix">
             <div class="sub-nav-holder">
                 <div class="nav-bar sub-nav container pad-width">
-                    <a href="{% url 'clients:edit_profile' %}" target="_blank">Edit Profile</a>
+                    <a href="{% url 'clients:edit_profile' %}">Edit Profile</a>
                     <a href="#">Manage
                         Subscriptions</a>
                     <a href="#">Credit Card
