--- a/apps/templates/clients/change_password.html
+++ b/apps/templates/clients/change_password.html
@@ -2,12 +2,21 @@
 
 {% block body %}
     <h1 class="h3 mb-3 fw-normal" style="text-align: center;">
-        Change Password</h1>
-    <div id="change-password-form" class="row g-3">
-        <form method="post">
-            {{ form.as_p }}
-            {% csrf_token %}
-            <button type="submit" id="login-button" class="btn btn-dark">Change Password</button>
-        </form>
+        Change Your Password</h1>
+    <hr>
+    <div class="password-change-parent">
+        <div class="password-change-child">
+            <div id="change-password-form" class="row g-3" style="width: 50vw;">
+                <div>
+                    <form method="post">
+                        {{ form.as_p }}
+                        {% csrf_token %}
+                        <div style="text-align: center;">
+                            <button type="submit" id="login-button" class="btn btn-dark">Change Password</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
     </div>
 {% endblock %}
