🖼 Added media content to the project

--- a/apps/templates/_helpers/_header.html
+++ b/apps/templates/_helpers/_header.html
@@ -45,11 +45,27 @@
                     </a>
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" href="/blogs/">Daily Blog</a></li>
+                        <li><a class="dropdown-item" href={% url 'blogs:category' cats='trading ideas'|slugify %}>Trading
+                            Ideas</a></li>
                         <li><a class="dropdown-item" href="#">Weekly Updates</a></li>
                         <li>
                             <hr class="dropdown-divider">
                         </li>
                         <li><a class="dropdown-item" href="#"><i>LIQUIDUS University</i></a></li>
+                    </ul>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button"
+                       data-bs-toggle="dropdown" aria-expanded="false">
+                        LIQUIDUS PRO
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="#">Our Levels</a></li>
+                        <li><a class="dropdown-item" href="#">Risk Ranges</a></li>
+                        <li>
+                            <hr class="dropdown-divider">
+                        </li>
+                        <li><a class="dropdown-item" href="#">Vasyl's Nudes 🔞</a></li>
                     </ul>
                 </li>
             </ul>
